--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         </div>
       </div>
       <div class="card_box flex flex-col justify-between">
-        <a href="https://topmate.io/eduvizo_india/56434"><img
+        <a href="https://topmate.io/ishaan_dahiya"><img
             class="img-fluid-1"
         style="width:100%; text-align:center; border-radius:15px;"
           src="assets/img/tutors/ishaan dahiya.jpeg"
@@ -359,7 +359,7 @@
         </div>
         <div class="card-footer">
           <small class="text-muted">
-            <a href="https://topmate.io/eduvizo_india/56434" target="_blank" class="btn btn-primary btn-block"> Connect Now</a></small>
+            <a href="https://topmate.io/ishaan_dahiya" target="_blank" class="btn btn-primary btn-block"> Connect Now</a></small>
         </div>
       </div>
       <div class="card_box flex flex-col justify-between">
@@ -411,7 +411,7 @@
         </div>
       </div>
       <div class="card_box flex flex-col justify-between">
-        <a href="https://topmate.io/eduvizo_india/56434"><img
+        <a href="https://topmate.io/diksha_bansal"><img
             class="img-fluid-1"
         style="width:100%; text-align:center; border-radius:15px;"
           src="assets/img/tutors/tanmay.jpeg"
@@ -419,11 +419,11 @@
         /></a>
         <div class="card-body">
           <!-- <h5 class="card-title">Card title</h5> -->
-          <p class="text-muted" style="text-align: center;">Tanmay Garg<br> <span class="font-weight-bold" style="color:black">IIT Hyderabad</span></p>
+          <p class="text-muted" style="text-align: center;">Diksha Bansal<br> <span class="font-weight-bold" style="color:black">Buisness Development Analyst </span></p>
         </div>
         <div class="card-footer">
           <small class="text-muted">
-            <a href="https://topmate.io/eduvizo_india/56434" target="_blank" class="btn btn-primary btn-block"> Connect Now</a></small>
+            <a href="https://topmate.io/diksha_bansal" target="_blank" class="btn btn-primary btn-block"> Connect Now</a></small>
         </div>
       </div>
       <div class="card_box flex flex-col justify-between">
