--- a/index.html
+++ b/index.html
@@ -379,19 +379,19 @@
         </div>
       </div>
       <div class="card_box flex flex-col justify-between">
-        <a href="https://topmate.io/eduvizo_india/56434"><img
+        <a href="https://topmate.io/abhigyan_khaund"><img
             class="img-fluid-1"
         style="width:100%; text-align:center; border-radius:15px;"
-          src="assets/img/tutors/sudhanshu.jpeg"
+          src="assets/img/tutors/Abhigyan.jpeg"
             alt="Card image cap"
         /></a>
         <div class="card-body">
           <!-- <h5 class="card-title">Card title</h5> -->
-          <p class="text-muted" style="text-align: center;">Sudhanshu Rai <br> <span class="font-weight-bold" style="color:black">Engineering Physics</span></p>
+          <p class="text-muted" style="text-align: center;">Abhigyan Khaund <br> <span class="font-weight-bold" style="color:black">MS in Computer Science, Georgia Tech University </span></p>
         </div>
         <div class="card-footer">
           <small class="text-muted">
-            <a href="https://topmate.io/eduvizo_india/56434" target="_blank" class="btn btn-primary btn-block"> Connect Now</a></small>
+            <a href="https://topmate.io/abhigyan_khaund" target="_blank" class="btn btn-primary btn-block"> Connect Now</a></small>
         </div>
       </div>
       <div class="card_box flex flex-col justify-between">
@@ -430,12 +430,12 @@
         <a href="https://topmate.io/eduvizo_india/56434"><img
             class="img-fluid-1"
         style="width:100%; text-align:center; border-radius:15px;"
-          src="assets/img/tutors/gagan.jpeg"
+          src="assets/img/tutors/Naman.jpeg"
             alt="Card image cap"
         /></a>
         <div class="card-body">
           <!-- <h5 class="card-title">Card title</h5> -->
-          <p class="text-muted" style="text-align: center;">Gagan Deshad <br> <span class="font-weight-bold" style="color:black">Engineering Physics</span></p>
+          <p class="text-muted" style="text-align: center;">Naman Chaudhary<br> <span class="font-weight-bold" style="color:black">Masters in Engineering Management Dartmouth University </span></p>
         </div>
         <div class="card-footer">
           <small class="text-muted">
