--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         </div>
       </div>
       <div class="card_box flex flex-col justify-between">
-        <a href="https://topmate.io/eduvizo_india/56434"><img
+        <a href="https://topmate.io/naman_chaudhary10"><img
             class="img-fluid-1"
         style="width:100%; text-align:center; border-radius:15px;"
           src="assets/img/tutors/Naman.jpeg"
@@ -439,7 +439,7 @@
         </div>
         <div class="card-footer">
           <small class="text-muted">
-            <a href="https://topmate.io/eduvizo_india/56434" target="_blank" class="btn btn-primary btn-block"> Connect Now</a></small>
+            <a href="https://topmate.io/naman_chaudhary10" target="_blank" class="btn btn-primary btn-block"> Connect Now</a></small>
         </div>
       </div>
       <div class="card_box flex flex-col justify-between" >
