--- a/index.html
+++ b/index.html
@@ -363,19 +363,19 @@
         </div>
       </div>
       <div class="card_box flex flex-col justify-between">
-        <a href="https://topmate.io/eduvizo_india/56434"><img
+        <a href="https://topmate.io/neelotpal_datta"><img
             class="img-fluid-1"
         style="width:100%; text-align:center; border-radius:15px;"
-          src="assets/img/tutors/anshika.jpeg"
+          src="assets/img/tutors/neelo.jpeg"
             alt="Card image cap"
         /></a>
         <div class="card-body">
           <!-- <h5 class="card-title">Card title</h5> -->
-          <p class="text-muted" style="text-align: center;">Anshika Bajpai <br> <span class="font-weight-bold" style="color:black">Data Science and Engineering</span></p>
+          <p class="text-muted" style="text-align: center;">Neelottpal Dutta <br> <span class="font-weight-bold" style="color:black">\PhD Mechanical</span></p>
         </div>
         <div class="card-footer">
           <small class="text-muted">
-            <a href="https://topmate.io/eduvizo_india/56434" target="_blank" class="btn btn-primary btn-block"> Connect Now</a></small>
+            <a href="https://topmate.io/neelotpal_datta" target="_blank" class="btn btn-primary btn-block"> Connect Now</a></small>
         </div>
       </div>
       <div class="card_box flex flex-col justify-between">
