--- a/index.html
+++ b/index.html
@@ -379,19 +379,19 @@
 
 
     <div id="videos" style="padding: 30px;">
-        <h2 style="text-align:center;font-size:3rem;font-weight:bold;"><br>Videos<br><br></h2>
+        <h2 style="text-align:center;font-size:3rem;font-weight:bold;"><br>VIDEOS<br><br></h2>
         <!--<div class="section-header "></div>-->
-        <iframe width="420" height="315" style="margin-left:9%;padding-right: 2%;display:inline-block;width:20%;"
-            src="https://www.youtube.com/watch?v=2dczveSrsv8">
+        <iframe width="420" height="210" style="margin-left:9%;padding-right: 2%;display:inline-block;width:20%;"
+            src="https://www.youtube.com/embed/2dczveSrsv8?controls=0">
         </iframe>
-        <iframe width="420" height="315" style="padding-right: 2%;display:inline-block;width:20%;"
-            src="https://www.youtube.com/watch?v=P9teWNAab1Q">
+        <iframe width="420" height="210" style="padding-right: 2%;display:inline-block;width:20%;"
+            src="https://www.youtube.com/embed/P9teWNAab1Q?controls=0">
         </iframe>
-        <iframe width="420" height="315" style="padding-right: 2%; display:inline-block;width:20%;"
-            src="https://www.youtube.com/watch?v=jWzV8g9ywb8">
+        <iframe width="420" height="210" style="padding-right: 2%; display:inline-block;width:20%;"
+            src="https://www.youtube.com/embed/jWzV8g9ywb8?controls=0">
         </iframe>
-        <iframe width="420" height="315" style=" padding-right: 2%; display:inline-block;width:20%; margin-right:9%;"
-            src="https://www.youtube.com/watch?v=ct5eFvUxFYM&t=3063s">
+        <iframe width="420" height="210" style=" padding-right: 2%; display:inline-block;width:20%; margin-right:9%;"
+            src="https://www.youtube.com/embed/ct5eFvUxFYM?controls=0">
         </iframe>
 
     </div>
