--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
                         <i class="fa-solid fa-plane-arrival fa-3x"></i>
                         <li class="active">
-                            <a href="index.html">HOME</a>
+                            <a href="#home">HOME</a>
                         </li>
 
                         <!--
